cloudformation_template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS-Study Templete

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.2.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: aws-study-vpc

  # Subnet
  SubnetAZ1a:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.2.0.0/24
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1a 
      Tags:
        - Key: Name
          Value: aws-study-subnetAZ1a
  SubnetAZ1c:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.2.1.0/24
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1c
      Tags:
        - Key: Name
          Value: aws-study-subnetAZ1c

  # InternetGateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: aws-study-gw

  # VPCGatewayAttachment
  AttachmentGateway:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties:
    VpcId: !Ref VPC
    InternetGatewayId: !Ref InternetGateway

  # RouteTable
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: aws-atudy-route
  RouteInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  RouteLocal:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetAZ1a

  # SecurityGroup
  SecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS Study EC2
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 3000
        ToPort: 3000
        CidrIp: 0.0.0.0/0      
      SecurityGroupIngress:
      - IpProtocol: -1
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: aws-study-securityGroup-ec2
  SecurityGroupRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: AWS Study RDS
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref SecurityGroupEC2
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: aws-study-securityGroup-rds
  
  # Elastic IP
  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  # EC2
  EC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-00a5245b4816c38e6
      InstanceType: t2.micro
      SubnetId: !Ref SubnetAZ1a
      DisableApiTermination: false
      InstanceInitiatedShutdownBehavior: stop
      KeyName: aws-study
      Monitoring: false
      SecurityGroupIds:
        - !Ref SecurityGroupEC2
      Tags:
        - Key: Name
          Value: aws-study-ec2
  
  IPAssociate:
    Type: AWS::EC2::EIPAssociation
    Properties: 
      InstanceId: !Ref EC2
      EIP: !Ref ElasticIP

  # RDS
  RDS:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      DBInstanceClass: db.t2.micro
      Port: 5432
      StorageType: gp2
      BackupRetentionPeriod: 1
      MasterUsername: root
      MasterUserPassword: rootroot
      PreferredBackupWindow: 14:00-14:30
      PreferredMaintenanceWindow: tue:14:56-tue:15:26
      DBName: MyDatabase
      Engine: postgres
      EngineVersion: 10.6
      LicenseModel: postgresql-license
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref SecurityGroupRDS
      Tags:
        - Key: Name
          Value: aws-study-rds
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Created from the RDS Management Console
      SubnetIds:
        - !Ref SubnetAZ1a
        - !Ref SubnetAZ1c
  
  # ELB
  ELB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: aws-study-elb
      SecurityGroups:
        - !Ref SecurityGroupEC2
      Subnets:
        - !Ref SubnetAZ1a
        - !Ref SubnetAZ1c
      Tags:
      - Key: Name
        Value: aws-study-elb
  ELBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: aws-study-elb-target-group
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VPC
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      HealthCheckTimeoutSeconds: 5
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/"
      HealthCheckPort: "traffic-port"
      HealthCheckIntervalSeconds: 10
      Matcher:
        HttpCode: 200
      Tags:
        - Key: Name
          Value: aws-study-elb-target-group
      Targets:
        - Id: !Ref EC2
          Port: 80
  ELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ELB
      DefaultActions:
        - TargetGroupArn: !Ref ELBTargetGroup
          Type: forward
      Port: 80
      Protocol: HTTP
